src/objects/DSM4_code__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disorder_Code__c</fullName>
        <label>Disorder_Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DSM4_code</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DSM4_code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DSM4_codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>